--- a/code/Config_DashCam.json
+++ b/code/Config_DashCam.json
@@ -1,1 +1,1 @@
-{"File_Number": {"number": 22}, "number": 28}
+{"File_Number": 61, "Duration": 1, "Max_Files": 99999, "Space_Limit": 20, "Delete_Files": 10}
