--- a/code/Config_DashCam.json
+++ b/code/Config_DashCam.json
@@ -1,1 +1,1 @@
-{"File_Number": 2057, "Duration_In_Minutes": 1, "Max_Files": 99999, "Space_Limit_In_Percentage": 80, "Delete_Files": 10, "ResolutionX": 1280, "ResolutionY": 1024, "Framerate": 25}
+{"File_Number": 0, "Duration_In_Minutes": 1, "Max_Files": 99999, "Space_Limit_In_Percentage": 80, "Delete_Files": 10, "ResolutionX": 1280, "ResolutionY": 1024, "Framerate": 25, "Quality": 20}
